# PyXA

./: .gitignore  .markdownlint.json  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PyXA.py  README.md  XABase.py  XABaseScriptable.py  requirements.txt  setup.cfg  test.py
.github/: FUNDING.yml
PyXA/: PyXA.py  XABase.py  XABaseScriptable.py  XAErrors.py  XAEvents.py  XAProtocols.py  XATypes.py  __init__.py
PyXA/Additions/: Devices.py  Learn.py  Speech.py  UI.py  Utils.py  Web.py  XAWeb.py
PyXA/additions/: XALearn.py  XAUtils.py
PyXA/apps/: AcrobatReader.py  Alfred.py  Amphetamine.py  Arc.py  Automator.py  Bike.py  BookMarkable.py  Brave.py  Calculator.py  Calendar.py  Cardhop.py  Chromium.py  Console.py  Contacts.py  DatabaseEvents.py  Dictionary.py  Drafts.py  Fantastical.py  Finder.py  Firefox.py  Flow.py  FontBook.py  GoogleChrome.py  Hammerspoon.py  IINA.py  ImageEvents.py  Keynote.py  Mail.py  Maps.py  MediaApplicationBase.py  Messages.py  MicrosoftEdge.py  Music.py  Notes.py  Numbers.py  OmniOutliner.py  OmniWeb.py  Pages.py  PathFinder.py  PhotosApp.py  (+19 more)
PyXA/extensions/: XAWeb.py
apps/: Calendar.py  Finder.py  Messages.py  Music.py  Notes.py  Reminders.py  Safari.py  Terminal.py  TextEdit.py
docs/: .buildinfo  .readthedocs.yaml  Makefile  bugs.html  genindex.html  index.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/PyXA/: PyXA 2.html  PyXA.html  XABase 2.html  XABase.html  XABaseScriptable 2.html  XABaseScriptable.html  XAErrors 2.html  XAErrors.html  XAProtocols.html  XATypes.html
docs/_sources/: bugs.rst.txt  index.rst.txt
docs/_sources/about/: index.rst.txt
docs/_sources/reference/: index.rst.txt  xabase.rst.txt  xaerrors.rst.txt  xaprotocols.rst.txt
docs/_sources/tutorial/: applescript.rst.txt  appscript.rst 3.txt  clipboard.rst.txt  (+11 more)
docs/_static/: documentation_options.js
docs/about/: contributing_guidelines.html  index.html
docs/reference/: index.html  pyxa.html  xabase.html  xabasescriptable.html  xaerrors.html  xaprotocols.html  xatypes.html
docs/source/: conf.py
docs/tutorial/: applescript.html  appscript.html  clipboard.html  devices.html  images.html  index.html  lists.html  menubar.html  spotlight.html  tips_tricks.html  ui_scripting.html  user_input.html
reference/source/: conf.py
sphinx/source/: bugs.rst  conf.py  index.rst
tests/: test_base_scriptable.py  test_calendar.py  test_contacts.py  test_database_events.py  test_finder.py  test_iwork.py  test_messages.py  test_music.py  test_notes.py  test_omniweb.py  test_reminders.py  test_safari.py  test_shortcuts.py  test_system_preferences.py  test_system_settings.py  test_terminal.py  test_textedit.py
(+1248 files in other folders)
