[metadata]
name = mac-pyxa
version = 0.1.2
author = Stephen Kaplan
author_email = stephen.kaplan@maine.edu
description = A package for accomplish AppleScript automation tasks using Python syntax.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SKaplanOfficial/PyXA
project_urls =
    Bug Tracker = https://github.com/SKaplanOfficial/PyXA/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.10
install_requires = 
    numpy == 1.23.4
    pyobjc == 8.5.1
    requests == 2.28.1
    beautifulsoup4 == 4.11.1